@@ -1,6 +1,6 @@
 {
 	"name": "crafting_combinator_xeraph",
-	"version": "0.1.2",
+	"version": "0.1.3",
 	"factorio_version": "1.1",
 	"title": "Crafting Combinator Xeraph's Fork",
 	"author": "LuziferSenpai, TheRustyKnife, Xeraph",
