@@ -27,7 +27,7 @@ crafting_combinator:refresh-rate-cc=How many ticks there will be between updates
 crafting_combinator:refresh-rate-rc=How many ticks there will be between updates (min 0)
 crafting_combinator:module-chest-size=Modifies the module chest prototype's inventory size
 crafting_combinator:crafting-combinator:craft-n-before-switch-default=Number of craft cycles for a cc to stay in sticky mode. This only affects newly placed crafting combinators.
-crafting_combinator:crafting-combinator:input-buffer-on-set-recipe-default=The input buffer (in terms of craft cycles) when cc changes recipe. This only affects newly placed crafting combinators.
+crafting_combinator:crafting-combinator:input-buffer-on-set-recipe-default=The input buffer size (in terms of craft cycles) when cc changes recipe. This only affects newly placed crafting combinators.
 
 [crafting_combinator]
 recipe-locale=Recipe __1__
@@ -85,7 +85,9 @@ sticky=Sticky behaviour
 craft-until-zero=Keep crafting until zero
 craft-until-zero:tooltip=Once a signal is selected, the combinator will not change the recipe again until that signal reaches zero.
 craft-n-before-switch=Number of crafts after signal removed
-craft-n-before-switch:tooltip=Craft at least this amount of times after signal is removed before the recipe can change.
+craft-n-before-switch:tooltip=Craft at least this amount of times (sticky mode) after signal is removed and before the recipe can change.
+input-buffer-size=Input buffer size in craft cycles
+input-buffer-size:tooltip=Set to -1 to remove the limit for input buffer.
 
 [blueprint]
 delayed-transfer-warning=Delayed blueprint tag transfer - settings might have transferred incorrectly.
