@@ -8,7 +8,7 @@ Date: ????
     - Fixed possible duping if an incorrect recipe is sent to cc (https://github.com/theRustyKnife/CraftingCombinator/issues/70)
     - Fixed GUI not closing when its associated cc/rc is destroyed
     - Fixed cc's tendency to buffer all available items in the overflow chest after recipe switch (https://mods.factorio.com/mod/crafting_combinator/discussion/632ce909888658ef30d15be0 https://forums.factorio.com/viewtopic.php?p=570197#p570197)
-      - Cc will now insert ingredients for only two craft cycles
+      - Cc will now insert ingredients for only two craft cycles, this can be changed from Map settings
   Features:
     - Blueprints and ghosts now carry cc and rc data
     - New sticky behaviour: Craft-n-before-switch
@@ -19,11 +19,19 @@ Date: ????
         - The duration of sticky period is evaluated only once per sticky mode activation. It is calculated based on machine's crafting progress and speed. Actual product is not taken into account in bringing the cc out of sticky mode - this is the intended design for UPS reason
       - By default a new/migrated cc is set to allow one more craft cycle before recipe switch
     - Cloning of cc and rc is now handled (BETA) (e.g. SE Spaceship, albeit module chest still has its chest inventory cost)
+    - Mod settings added for the following features:
+      - Module chest inventory size (in Startup)
+      - Craft-n-before-switch for newly placed cc
+      - Input buffer size (during recipe change) for newly placed cc
   Locale:
     - Fixed duplicate key for cs.cfg
     - Missing translations for new keys: 'time-multiplier:tooltip', 'sticky', 'craft-n-before-switch', 'craft-n-before-switch:tooltip', [blueprint]
   Changes:
-    - Optimized idle performance (https://github.com/theRustyKnife/CraftingCombinator/pull/71). As a result from this optimization, the combinator will no longer attempt to switch recipe if the chosen recipe/state of no recipe is the same as the previous update cycle
+    - Optimized cc idle performance (https://github.com/theRustyKnife/CraftingCombinator/pull/71).
+      - As a result from this optimization, the combinator will no longer attempt to switch recipe if the chosen recipe/state of no recipe is the same as the previous update cycle
+      - The optimization above might cause unintended cc behaviours
+      - As a general rule, cc in this version does not respond well to manual interventions - hence the behaviour of cc does not clear recipe for manually set assemblers
+      - Sending a signal or resetting the cc setup should fix this
     - Event registration now uses filters
     - Improved event handling for module chest, uses mine-entity instead of manual inventory management
     - Depreciated the usage of programmable speaker to store bp settings (settings-parser module)
